35) Kernel code cleanup.<br>
36) Add more values to enum ip_conntrack_info.<br>
37) Small fix in Software Fastnat.<br>
38) libupnp move to /lib dir from wscd.<br>
39) libupnp Update to 1.6.13 version.<br>
40) wscd now use new libupnp.<br>
41) USB-IPV6 images now use samba3.<br>
42) Remove USB without IPv6 images.<br>
43) Fix work iptv with DMZ enabled.<br>
44) Sysctl fix tune kernel for 16Mb, torrent enable or samba mode.<br>
45) Kernel nvram fix rebuild config part if crc is bad.<br>
46) Some critical netfilter fixes backported.<br>
47) Fix auto kernel network tune with hw_nat enabled.<br>
48) Hardware vlan offload must be enabled only if hw_nat and double tag disabled.<br>
49) If raeth build in static mode - move hw_nat hook to driver ode from external stub.<br>
50) Raeth: spin_lock_init must be after ether_setup. This may be crash system at reinit raeth.<br>
51) Now use ethtool for configure port speed and duplex (more portable and safe).<br>
52) Remove fs cleanall. Use fs fullreset instead. For details enter fs without param.<br>
53) Move high level switch configure to independed helper script config-switch.sh.<br>
54) Workaround for non correct port speed select in new SDK driver.<br>
55) Add snmpd daemon (Need add in webui in misc page. Variable snmpd 0/1).<br>
56) Add KLogd, SysLogd and  RemoteSysLogIP variables (Need add in webui).<br>
57) Dnsmasq update to 2.59 version.<br>
58) Enable snmp wifi drivers options.<br>
59) More clean updates.<br>
60) Fix update firmware with usb storage configured.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://wive-ng.sf.net">wive-ng.sf.net - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>