@@ -1,0 +1,8 @@
+#for all pppd sessions options
+lock
+noauth
+noipdefault
+nolog
+
+#minimum autoincrement pppX name
+minunit 1
