@@ -1,0 +1,180 @@
+#!/bin/sh
+
+#################################################
+# configure L2TP server helper			#
+#################################################
+
+# include global config
+. /etc/scripts/global.sh
+
+# wait to start web and run from goahead code
+. /etc/scripts/web_wait.sh
+web_wait
+
+# default variables
+LOG="logger -t vpn-server"
+ppp="/etc/ppp-l2tpsrv"
+var="/var/run/xl2tpd-srv"
+
+start() {
+ # get param
+ get_param
+
+ if [ "$l2tp_srv_enabled" = "1" ] && [ "$l2tp_srv_ip_range" != "" ] && \
+    [ "$l2tp_srv_ip_local" != "" ] && [ "$l2tp_srv_user" != "" ] && \
+    [ "$l2tp_srv_pass" != "" ] && [ ! "`pidof xl2tpd-srv`" ]; then
+
+    $LOG "Start l2tp vpn server"
+
+    # load kernel modules
+    load_modules
+
+    # start daemon
+    mkdir -p $var
+    (sleep 5 && xl2tpd-srv $full_l2tpd_opts) &
+ fi
+}
+
+stop() {
+    $LOG "Stop l2tp vpn server"
+    # try firt disconnect all clients
+    if [ -f $var/l2tp-control ]; then
+	echo "d default" > $var/l2tp-control
+	sleep 3
+    fi
+    # stop vpn server
+    if [ -f $var/l2tp.pid ]; then
+	pid=`cat $var/l2tp.pid`
+	if [ "$pid" != "" ]; then
+	    kill $pid > /dev/null 2>&1
+	    sleep 2
+	    kill -SIGKILL $pid > /dev/null 2>&1
+	    rm -f $var/l2tp.pid
+	fi
+    fi
+}
+
+load_modules() {
+    if [ ! -d /sys/module/pppol2tp ]; then
+	mod="ppp_generic pppox pppol2tp"
+	for module in $mod
+	do
+    	    modprobe -q $module
+	done
+    fi
+}
+
+gen_configs() {
+printf "$l2tp_srv_user * $l2tp_srv_pass\n" > $ppp/pap-secrets
+printf "$l2tp_srv_user * $l2tp_srv_pass\n" > $ppp/chap-secrets
+
+printf "
+[global]
+listen-addr = 0.0.0.0
+auth file = $ppp/chap-secrets\n
+
+[lns default]\n
+ip range = $l2tp_srv_ip_range
+local ip = $l2tp_srv_ip_local
+exclusive = no
+refuse authentication = no
+require authentication = yes
+require chap = yes
+pppoptfile = $ppp/options.l2tp\n
+" > $ppp/l2tpd.conf
+
+printf "
+noauth
+lcp-echo-interval 3
+lcp-echo-failure 8
+nodeflate
+noipx
+nomp
+noproxyarp
+refuse-pap
+refuse-eap
+lock
+minunit 1
+ip-up-script $ppp/ip-up
+ip-down-script $ppp/ip-down
+$l2tp_srv_ms_dns
+$l2tp_srv_ms_wins
+$l2tp_srv_lcp_adapt
+$l2tp_srv_mtu_size
+$l2tp_srv_mru_size\n
+" > $ppp/options.l2tp
+}
+
+get_param() {
+    ###########################################################################
+    # get some variables
+    ###########################################################################
+    l2tp_srv_enabled=`nvram_get 2860 l2tp_srv_enabled`
+    l2tp_srv_ip_range=`nvram_get 2860 l2tp_srv_ip_range`
+    l2tp_srv_ip_local=`nvram_get 2860 l2tp_srv_ip_local`
+    l2tp_srv_user=`nvram_get 2860 l2tp_srv_user`
+    l2tp_srv_pass=`nvram_get 2860 l2tp_srv_pass`
+    l2tp_srv_lcp_adapt=`nvram_get 2860 l2tp_srv_lcp_adapt`
+    l2tp_srv_mtu_size=`nvram_get 2860 l2tp_srv_mtu_size`
+    l2tp_srv_mru_size=`nvram_get 2860 l2tp_srv_mru_size`
+    l2tp_srv_debug=`nvram_get 2860 l2tp_srv_debug`
+    ###########################################################################
+    dnsPEnabled=`nvram_get 2860 dnsPEnabled`
+    SmbEnabled=`nvram_get 2860 SmbEnabled`
+    lan_ipaddr=`nvram_get 2860 lan_ipaddr`
+    ###########################################################################
+    # replace param for direct use
+    ###########################################################################
+    if [ "$l2tp_srv_lcp_adapt" = "" ] || [ "$l2tp_srv_lcp_adapt" = "0" ]; then
+	l2tp_srv_lcp_adapt=
+    else
+	l2tp_srv_lcp_adapt="lcp-echo-adaptive"
+    fi
+    if [ "$l2tp_srv_mtu_size" = "" ] || [ "$l2tp_srv_mtu_size" = "AUTO" ]; then
+	l2tp_srv_mtu_size=
+    else
+	l2tp_srv_mtu_size="mtu $l2tp_srv_mtu_size"
+    fi
+    if [ "$l2tp_srv_mru_size" = "" ] || [ "$l2tp_srv_mru_size" = "AUTO" ]; then
+	l2tp_srv_mru_size=
+    else
+	l2tp_srv_mru_size="mtu $l2tp_srv_mtu_size"
+    fi
+    if [ "$l2tp_srv_debug" = "" ] || [ "$l2tp_srv_debug" = "0" ]; then
+	l2tp_srv_debug=
+    else
+	l2tp_srv_debug="-D"
+    fi
+    if [ "$dnsPEnabled" = "1" ] && [ "$lan_ipaddr" != "" ] && [ "$lan_ipaddr" != "0.0.0.0" ]; then
+	l2tp_srv_ms_dns="ms-dns $lan_ipaddr"
+    else
+	l2tp_srv_ms_dns=
+    fi
+    if [ "$SmbEnabled" = "1" ] && [ "$lan_ipaddr" != "" ] && [ "$lan_ipaddr" != "0.0.0.0" ]; then
+	l2tp_srv_ms_wins="ms-wins $lan_ipaddr"
+    else
+	l2tp_srv_ms_wins=
+    fi
+    # final options compile
+    gen_configs
+    full_l2tpd_opts="-c $ppp/l2tpd.conf -s $ppp/chap-secrets -p $var/l2tp.pid -C $var/l2tp-control $l2tp_srv_debug"
+}
+
+case "$1" in
+        start)
+            start
+            ;;
+
+	stop)
+            stop
+            ;;
+
+	restart)
+            stop
+            start
+            ;;
+
+        *)
+            echo $"Usage: $0 {start|stop|restart|reload}"
+            exit 1
+esac
