@@ -102,6 +102,7 @@ NoForwardingBTNBSSID=0
 HideSSID=0
 ShortSlot=1
 SecurityMode=0
+AP2040Rescan=0
 WscConfMode=0
 WscConfStatus=2
 WscAKMP=1
@@ -221,13 +222,22 @@ vpnCpuLimit=3600
 vpnInterface=WAN
 vpnServer=
 vpnService=
-vpnRange=192.168.200.2-192.168.200.254
 vpnUser=vpn_user
 vpnPassword=vpn_password
 vpnMTU=AUTO
 vpnDGW=1
 vpnPurePPPOE=0
 vpnTestReachable=1
+l2tp_srv_enabled=0
+l2tp_srv_nat_enabled=1
+l2tp_srv_ip_range=172.16.200.2-172.16.200.20
+l2tp_srv_ip_local=172.16.200.1
+l2tp_srv_user=test
+l2tp_srv_pass=test
+l2tp_srv_lcp_adapt=1
+l2tp_srv_mtu_size=AUTO
+l2tp_srv_mru_size=AUTO
+l2tp_srv_debug=0
 WatchdogEnabled=0
 CrondEnable=0
 SmbEnabled=0
